--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: basic
 channels:
   - conda-forge
   - r
-  - defaults
+  - defaultshttps://github.com/yoselita/binder/blob/main/environment.yml
 dependencies:
   # Jupyter and JupyterHub dependencies
   - r-irkernel ==1.2
@@ -10,7 +10,7 @@ dependencies:
   - jupyter ==1.0.0 
   - jupyterhub ==1.4.2
   - notebook ==6.4.2
-  - jupyterlab ==3.1.4
+  - jupyterlab ==3.2.2
   - jupyter_nbextensions_configurator ==0.4.1
   - rise ==5.7.1
   # required to decouple binder and repo
