--- a/environment.yml
+++ b/environment.yml
@@ -2,19 +2,19 @@ name: basic
 channels:
   - conda-forge
   - r
-  - defaultshttps://github.com/yoselita/binder/blob/main/environment.yml
+  - defaults
 dependencies:
   # Jupyter and JupyterHub dependencies
-  - r-irkernel
-  - bash_kernel
-  - jupyter
-  - jupyterhub
-  - notebook
-  - jupyterlab
-  - jupyter_nbextensions_configurator
-  - rise
+  - r-irkernel ==1.2
+  - bash_kernel ==0.7.2
+  - jupyter ==1.0.0 
+  - jupyterhub ==1.4.2
+  - notebook ==6.4.2
+  - jupyterlab ==3.2.2
+  - jupyter_nbextensions_configurator ==0.4.1
+  - rise ==5.7.1
   # required to decouple binder and repo
-  - nbgitpuller
+  - nbgitpuller ==0.10.1
   # optional jupyter labextensions (i.e. git) build dependencies
   - jupyterlab-git
   - nodejs
@@ -23,4 +23,3 @@ dependencies:
   # Other
   - nano
   - gh
-  - vim
